@@ -1,3 +1,4 @@
+- STARKA-317 Enable CRAM input, improve per-chrom depth estimation 
 - STARKA-306 fix rare chunk size boundary defect in RangeMap
 - STARKA-323 refactor STARKA-293 to allow reuse of general accelerated binom
 test
